src/pages/index.css
.first-section{
  height: calc(100vh - 80px);
}

.features{
  font-size: 290px;
  line-height: 290px;
}

.stayAhead{
  font-size: 3rem;
  line-height: 3.9rem;
}

@media (max-width: 1024px) {
  .features{
    font-size: 9.7rem;
    line-height: 11.125rem;
  }

  .whatYouGet{
    top: unset;
    bottom: 0;
    left: 0;
    right: unset;
    font-size: 4.375rem;
    line-height: 6.0625rem;
  }
}

@media (max-width: 768px) {
  .features{
    font-size: 5.5rem;
    line-height: 7.125rem;
  }

  .whatYouGet{
    font-size: 2.375rem;
    line-height: 3.0625rem;
  }

  .first-section{
    height: calc(100vh - 240px);
    max-height: 600px;
  }

  .stayAhead{
    font-size: 1.625rem;
    line-height: 2.125rem;
  }
}

@media (max-width: 640px) {
  .features{
    font-size: 4.5rem;
    line-height: 6rem;
  }

  .whatYouGet{
    font-size: 1.8rem;
    line-height: 3rem;
  }
}

